crates/nm-collect-ubiquiti/tests/snapshots/edgeos__configuration_txt.snap
---
source: crates/nm-collect-ubiquiti/tests/edgeos.rs
expression: facts
---
{
  "system": {
    "hostname": "fixture-router-1",
    "model": null,
    "firmware": null,
    "uptime_seconds": null,
    "loadavg": null,
    "cpu_count": null,
    "memory": null,
    "serial": null,
    "ntp_servers": [
      "192.0.2.100"
    ],
    "offload": {
      "ipv4_forwarding": false,
      "ipv4_vlan": null,
      "ipv4_pppoe": null,
      "ipv6_forwarding": null,
      "ipv6_vlan": null,
      "ipv6_pppoe": null,
      "ipsec": null
    },
    "ssh_host_key_changed": null,
    "ssh_legacy_algorithms": null,
    "cpu_load_pct": null,
    "genuine": null,
    "platform": null,
    "soc": null,
    "firmware_build": null,
    "board_id": null,
    "netrole": "router"
  },
  "interfaces": [
    {
      "name": "eth0",
      "mac": null,
      "description": "WAN uplink",
      "admin_up": null,
      "oper_up": null,
      "speed_mbps": null,
      "duplex": null,
      "counters": null,
      "addresses": [
        "dhcp"
      ],
      "role": "Wan",
      "role_confidence": "Heuristic",
      "firewall_in": null,
      "firewall_out": null,
      "firewall_local": null
    },
    {
      "name": "eth1",
      "mac": null,
      "description": null,
      "admin_up": null,
      "oper_up": null,
      "speed_mbps": null,
      "duplex": null,
      "counters": null,
      "addresses": [
        "192.0.2.1/24"
      ],
      "role": null,
      "role_confidence": null,
      "firewall_in": "LAN_IN",
      "firewall_out": null,
      "firewall_local": null
    }
  ],
  "addresses": [],
  "radio": null,
  "routing": {
    "routes": [],
    "ospf_neighbors": [],
    "ospf_interfaces": [],
    "bgp_peers": [],
    "router_id": "192.0.2.1",
    "protocol_counts": {}
  },
  "services": {
    "http": {
      "enabled": false,
      "port": null,
      "listen_addresses": []
    },
    "https": {
      "enabled": true,
      "port": 443,
      "listen_addresses": []
    },
    "ssh": {
      "enabled": true,
      "port": 22,
      "listen_addresses": []
    },
    "telnet": {
      "enabled": false,
      "port": null,
      "listen_addresses": []
    },
    "snmp": {
      "enabled": true,
      "port": null,
      "community_present": true,
      "community_is_default": null
    },
    "upnp": {
      "enabled": false,
      "port": null,
      "listen_addresses": []
    },
    "discovery": {
      "enabled": true,
      "port": null,
      "listen_addresses": []
    },
    "ntp": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "dhcp_client": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "dhcp_server": {
      "enabled": true,
      "port": null,
      "listen_addresses": []
    },
    "pppoe": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    }
  },
  "dhcp": {
    "pools": [
      {
        "name": "LAN",
        "size": null,
        "leased": null,
        "available": null
      }
    ]
  },
  "firewall": {
    "rule_sets": [
      {
        "name": "LAN_IN",
        "default_action": "drop",
        "rules": [
          {
            "number": 10,
            "action": "accept",
            "packets": null,
            "bytes": null
          }
        ]
      }
    ],
    "nat_rules": [],
    "enabled": null,
    "vendor_fields": {}
  },
  "config": {
    "format": "SetCommands",
    "text": "set 'firewall' 'name' 'LAN_IN' 'default-action' 'drop'\nset 'firewall' 'name' 'LAN_IN' 'rule' '10' 'action' 'accept'\nset 'interfaces' 'ethernet' 'eth0' 'address' 'dhcp'\nset 'interfaces' 'ethernet' 'eth0' 'description' 'WAN uplink'\nset 'interfaces' 'ethernet' 'eth1' 'address' '192.0.2.1/24'\nset 'interfaces' 'ethernet' 'eth1' 'firewall' 'in' 'name' 'LAN_IN'\nset 'protocols' 'bgp' '64512' 'neighbor' '192.0.2.2' 'remote-as' '64513'\nset 'protocols' 'ospf' 'area' '0' 'network' '192.0.2.0/24'\nset 'protocols' 'ospf' 'parameters' 'router-id' '192.0.2.1'\nset 'service' 'dhcp-server' 'shared-network-name' 'LAN' 'subnet' '192.0.2.0/24' 'start' '192.0.2.10' 'stop' '192.0.2.109'\nset 'service' 'gui' 'https-port' '443'\nset 'service' 'snmp' 'community' '<redacted>'\nset 'service' 'ssh' 'port' '22'\nset 'system' 'host-name' 'fixture-router-1'\nset 'system' 'ntp' 'server' '192.0.2.100'\nset 'system' 'offload' 'ipv4' 'forwarding' 'disable'\n",
    "secrets_removed": 0
  },
  "neighbors": []
}
