crates/nm-collect-ubiquiti/tests/snapshots/edgeos__meminfo_txt.snap
---
source: crates/nm-collect-ubiquiti/tests/edgeos.rs
expression: facts
---
{
  "system": {
    "hostname": null,
    "model": null,
    "firmware": null,
    "uptime_seconds": null,
    "loadavg": null,
    "cpu_count": null,
    "memory": {
      "total_bytes": 262144000,
      "available_bytes": 20480000,
      "free_bytes": 10240000
    },
    "serial": null,
    "ntp_servers": [],
    "offload": null,
    "ssh_host_key_changed": null,
    "ssh_legacy_algorithms": null,
    "cpu_load_pct": null,
    "genuine": null,
    "platform": null,
    "soc": null,
    "firmware_build": null,
    "board_id": null,
    "netrole": null
  },
  "interfaces": [],
  "addresses": [],
  "radio": null,
  "routing": null,
  "services": {
    "http": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "https": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "ssh": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "telnet": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "snmp": {
      "enabled": null,
      "port": null,
      "community_present": null,
      "community_is_default": null
    },
    "upnp": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "discovery": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "ntp": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "dhcp_client": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "dhcp_server": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "pppoe": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    }
  },
  "dhcp": null,
  "firewall": null,
  "config": null,
  "neighbors": []
}
